--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -7,13 +7,17 @@
     }
   },
   "ConnectionStrings": {
-    "HangfireConnection": "Server=localhost;Database=KanzCronDb;User Id=sa;Password=ZXasqw12!@;TrustServerCertificate=True;",
-    "KanzwayConnection": "Server=20.16.33.143,1433;Database=KanzDb;User=blsky;Password=blu3sky;Encrypt=True;TrustServerCertificate=True"
+    "HangfireConnection": "Server=kanzjobs.database.windows.net;Database=KanzJobsDB;User=AdminDB;Password=Kanz@Way!DB03;TrustServerCertificate=True",
+    "KanzwayConnection": "Server=kanzwaydb.database.windows.net,1433;Database=KanzDb;User=AdminDB;Password=Kanz@Way!DB03;Encrypt=False"
   },
   "KanzwaySetting": {
-    "ExpirePendingPaymentInHours": 24,
-    "KanzApiUrl": "https://localhost:7050/",
+    "ExpirePendingPaymentInHours": 1,
+    "KanzApiUrl": "https://api.kanzway.com/v1",
     "CronCleanupMinute": 59,
     "CronPendingPayment": 5
+  },
+  "BasicAuthentication": {
+    "Username": "kanzadmin",
+    "Password": "K4nzW4y@1111"
   }
 }
